--- a/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
+++ b/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
@@ -11,7 +11,7 @@
 <hr>
 <div style="display: flex; flex-direction: rox; justify-content: space-between; margin-top: 200px;">
     <div></div>
-    <div>
+    <div routerLink="/user-edit/{{user.id}}">
         <img src="/assets/parameters.png" alt="parameters">
         <h1>Gérer l'utilisateur</h1>
     </div>
