--- a/front-end/src/app/users/user-edit/user-edit.component.html
+++ b/front-end/src/app/users/user-edit/user-edit.component.html
@@ -50,5 +50,5 @@
       <br>
     </label>
 
-    <button type="submit" class="button-card" (click)="edit()" [routerLink]="['/user-list']">Valider</button>
+    <button type="submit" class="button-card" (click)="edit()" [routerLink]="['/user-stats-menu/{{user.id}}']">Valider</button>
   </form>
