--- a/front-end/src/app/caregiver/user-management/user-management.component.scss
+++ b/front-end/src/app/caregiver/user-management/user-management.component.scss
@@ -5,10 +5,19 @@
     max-height: 175px;
 }
 
-.user {
-    justify-content: center;
-    margin: 100px;
+.user-list {
+    display: flex;
+    flex-wrap: wrap;
 }
+
+.user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(19% - 10px);
+    margin: 10px;
+}
+
 
 #back {
     margin-top: 10px;
