--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -49,5 +49,5 @@
   </label>
   <br><br>
 
-  <button type="submit" class="button-card" (click)="addUser()" [routerLink]="['/user-list']">Valider</button>
+  <button type="submit" class="button-card" (click)="addUser()" [routerLink]="['/user-management']">Valider</button>
 </form>
