--- a/front-end/src/app/quizzes/quiz-list/quiz-list.component.scss
+++ b/front-end/src/app/quizzes/quiz-list/quiz-list.component.scss
@@ -9,6 +9,19 @@ img {
 
 #back {
   margin-top: 10px;
-  max-width: 121px;
-  max-height: 121px;
+  max-width: 100px;
+  max-height: 100px;
+}
+
+#user-img {
+  max-width: 150px;
+  max-height: 150px;
+  display: flex; 
+  justify-content: flex-end; 
+  margin-left: 16px;
+}
+
+.quiz {
+  margin: 150px;
+    margin-bottom: 100px;
 }
