--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
@@ -51,6 +51,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
 }
 
 .top > div:first-of-type {
@@ -77,7 +78,7 @@
 .top > div:last-of-type img {
     height: 150px;
     margin-right: 10px;
-    border-radius: 50%;
+    margin-left: 16px;
 }
 
 .top > div:last-of-type h2 {
