--- a/front-end/src/app/quizzes/theme-list/theme-list.component.html
+++ b/front-end/src/app/quizzes/theme-list/theme-list.component.html
@@ -1,9 +1,12 @@
-<div style="display: flex; flex-direction: row; justify-content: space-between;">
-    <img *ngIf="type==='play'" id="back" src="/assets/back.png" alt="back" routerLink="">
-    <img *ngIf="type==='stats'" id="back" src="/assets/back.png" alt="back" routerLink="/user-stats/{{user.firstName}}-{{user.lastName}}">
-    <div style="display: flex; flex-direction: row; justify-content: flex-end;">
-        <h1 style="display: flex; justify-content: flex-end;">{{user.firstName}} {{user.lastName}}</h1>
-        <img id="user-img" style="display: flex; justify-content: flex-end;" alt="user-img" src="{{user.photo}}">
+<div style="display: flex; flex-direction: row; justify-content: space-between; margin-top: 10px;">
+    <div style="display: flex; flex-direction: column; align-items: center;">
+        <img *ngIf="type==='play'" id="back" src="/assets/back.png" alt="back" routerLink="">
+        <img *ngIf="type==='stats'" id="back" src="/assets/back.png" alt="back" routerLink="/user-stats/{{user.firstName}}-{{user.lastName}}">
+        <h2 style="color:gray">Retour</h2>
+    </div>
+    <div style="display: flex; flex-direction: row; justify-content: flex-end; align-items: center;">
+        <h2 style="display: flex; justify-content: flex-end; margin-right: 16px;">{{user.firstName}} {{user.lastName}}</h2>
+        <img id="user-img" alt="user-img" src="{{user.photo}}">
     </div>
 </div>
 <h1 style="display: flex; justify-content: center;">Choisissez un thème</h1>
