--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -1,13 +1,13 @@
 <div style="display: flex; flex-direction: row; margin-top: 20px; justify-content: space-between;">
-    <div style="display:flex; flex-direction: row;">
+    <div style="display:flex; flex-direction: row; align-items: center;">
         <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img">
-        <div style="display: flex; flex-direction: column; margin-left: 16px; align-self: center;">
-            <h4>{{quiz.name}}</h4>
-            <span>Question {{numQuestion}}/{{quiz.questions.length + quiz.associations.length}}</span>
+        <div style="display: flex; flex-direction: column; margin-left: 16px;">
+            <h4 style="margin:0">{{quiz.name}}</h4>
+            <span style="margin: 0; font-size: 20px;">Question {{numQuestion}}/{{quiz.questions.length + quiz.associations.length}}</span>
         </div>
     </div>
     <div style="display: flex; flex-direction: row;">
-        <h3 style="display:flex; align-self: center; float: right; margin-right: 30px;">{{user.firstName}} {{user.lastName}}</h3>
+        <h2 style="display:flex; align-self: center; float: right; margin-right: 30px;">{{user.firstName}} {{user.lastName}}</h2>
         <div *ngIf="user.photo!==''">
             <img src="{{user.photo}}" alt="user-img" id="user-img">
         </div>
