--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.html
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.html
@@ -1,11 +1,14 @@
 <h1 style="display: flex; justify-content: center; align-self: center; margin-top: 100px;">Cliquer sur la photo de vous</h1>
 <h1 style="display: flex; justify-content: center; align-self: center;">avec votre nom</h1>
 
-<div style="display: flex; flex-direction: row;">
-    <div *ngFor="let user of userList">
-        <div class="user">
-            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
-            <h1>{{user.firstName}} {{user.lastName}}</h1>
+<div class="user-list">
+    <div *ngFor="let user of userList" class="user">
+        <div *ngIf="user.photo!==''">
+            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
         </div>
+        <div *ngIf="user.photo===''">
+            <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/user-stats-menu/{{user.id}}">
+        </div>
+        <h1>{{user.firstName}} {{user.lastName}}</h1>
     </div>
 </div>
