--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
@@ -3,7 +3,15 @@
     max-height: 175px;
 }
 
+.user-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .user {
-    justify-content: center;
-    margin: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(19% - 10px);
+    margin: 10px;
 }
