--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.html
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.html
@@ -4,10 +4,10 @@
 <div class="user-list">
     <div *ngFor="let user of userList" class="user">
         <div *ngIf="user.photo!==''">
-            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
+            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
         </div>
         <div *ngIf="user.photo===''">
-            <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/user-stats-menu/{{user.id}}">
+            <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
         </div>
         <h1>{{user.firstName}} {{user.lastName}}</h1>
     </div>
