--- a/front-end/src/app/caregiver/user-stats/user-stats.component.scss
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.scss
@@ -1,7 +1,7 @@
 #back {
-    margin-top: 10px;
-    max-width: 121px;
-    max-height: 121px;
+    margin-right: 16px;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 hr {
