--- a/front-end/src/app/caregiver/user-stats/user-stats.component.html
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.html
@@ -11,18 +11,23 @@
     <div></div>
 </div>
 <hr>
-<div style="display: flex; flex-direction: column; margin: 0 auto;">
-    <img id="user-img"  alt="user-img" src="{{user.photo}}">
+<div style="display: flex; flex-direction: column; margin: 0 auto; align-items: center;">
+    <img id="user-img"  alt="user-img" src="{{user.photo}}" onerror="this.onerror=null; this.src='/assets/users/user.png'">
     <h1>{{user.firstName}} {{user.lastName}}</h1>
 </div>
-<div style="display: flex; flex-direction: column; margin: 0 auto;">
-    <h2>Nombre de parties : {{this.numberPlayed}}</h2>
-    <h2 *ngIf="this.lastGame===0">Dernière partie : Aujourd'hui</h2>
-    <h2 *ngIf="this.lastGame===1">Dernière partie: Il y a 1 jour</h2>
-    <h2 *ngIf="this.lastGame>1">Dernière partie: Il y a {{this.lastGame}} jours</h2>
-    <h2>Quiz Préféré : {{this.favoriteQuiz}}</h2>
-</div>
+<div style="display: flex; flex-direction: column; align-items: center;" *ngIf="this.numberPlayed !== 0">
+    <div style="display: flex; flex-direction: column; margin: 0 auto;">
+        <h2>Nombre de parties : {{this.numberPlayed}}</h2>
+        <h2 *ngIf="this.lastGame===0">Dernière partie : Aujourd'hui</h2>
+        <h2 *ngIf="this.lastGame===1">Dernière partie: Il y a 1 jour</h2>
+        <h2 *ngIf="this.lastGame>1">Dernière partie: Il y a {{this.lastGame}} jours</h2>
+        <h2>Quiz Préféré : {{this.favoriteQuiz}}</h2>
+    </div>
 
-<div style="display: flex; justify-content: center;">
-    <button id="quiz-stats" routerLink="/theme-list/{{this.user.firstName}}-{{this.user.lastName}}/stats">Statistiques par Quiz</button>
+    <div style="display: flex; justify-content: center;">
+        <button id="quiz-stats" routerLink="/theme-list/{{this.user.firstName}}-{{this.user.lastName}}/stats">Statistiques par Quiz</button>
+    </div>
+</div>
+<div *ngIf="this.numberPlayed===0" style="display: flex; align-items: center; justify-content: center;">
+    <h2>Il n'y a pas encore de statistiques pour cet utilisateur...</h2>
 </div>
