--- a/front-end/src/app/questions/play-question/play-question.component.html
+++ b/front-end/src/app/questions/play-question/play-question.component.html
@@ -3,7 +3,7 @@
     <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:80%;">
         <div *ngFor="let answer of question.answers; let i=index">
             <div style="display:flex; flex-direction:column; align-items: center;">
-                <img class="answer" alt="answer-{{i+1}}" src="/assets/quiz-{{quiz.id}}/question-{{numQuestion}}/img-{{i+1}}.jpg" (click)="check(i+1)" 
+                <img class="answer" alt="answer-{{i+1}}" src="{{answer.img}}" (click)="check(i+1)" 
                 [ngClass]="{'correct-answer': answer.isCorrect && assistance % 1000 > 100}">
             </div>
         </div>
