--- a/front-end/src/app/quizzes/quiz/quiz.component.html
+++ b/front-end/src/app/quizzes/quiz/quiz.component.html
@@ -1,5 +1,5 @@
 <div class="quiz" style="display: flex; flex-direction: column;">
-    <img src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="quiz-img" (click)="onQuizClicked()">
+    <img src="{{quiz.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="quiz-img" (click)="onQuizClicked()">
     <h2 style="display: flex; justify-content:center;">{{quiz.name}}</h2>
     <div *ngIf="type == null" style= "float: right;">
         <button style= "float: right;" class="button-card" (click)="delete()">Supprimer</button>
