--- a/front-end/src/app/associations/association-form/association-form.component.html
+++ b/front-end/src/app/associations/association-form/association-form.component.html
@@ -9,13 +9,17 @@
     <button style= "margin: 10px;" class="button-card" (click)="addConnection()">Ajouter connexion</button>
     <div class="answer" formArrayName="connections">
       <div *ngFor="let address of connections.controls; let i=index">
-        <div class="answer-form" [formGroupName]="i">
-          <label>
-            <label style="font-weight: bold;">Connexion {{i + 1}}</label><br>
-            <input class= "input-text" type="text" [formControlName]="'valueToConnect'">
+        <div class="answer-form" [formGroupName]="i" style="display:flex;">
+            <label style="font-weight: bold; margin-right: 10px;">Connexion {{i + 1}}</label>
+            <div style="display:flex; flex-direction: column;">
+              <input placeHolder = "Label" class= "input-text" type="text" [formControlName]="'valueToConnect'">
+              <input placeHolder = "Lien d'image" class= "input-text" type="text" [formControlName]="'coverImageToConnect'">
+            </div>
             <img style= "padding:5px;" alt="->" width = "30x"  height= "auto" src="/assets/quiz-editor/association-arrow.svg"> 
-            <input class = "input-text" type="text" [formControlName]="'valueToBeConnected'">
-          </label>
+            <div style="display:flex; flex-direction: column;">
+              <input class = "input-text" type="text" [formControlName]="'valueToBeConnected'">
+              <input class= "input-text" type="text" [formControlName]="'coverImageToBeConnected'">
+            </div>
         </div>
       </div>
     </div>
