--- a/front-end/src/app/quizzes/play-association/play-association.component.html
+++ b/front-end/src/app/quizzes/play-association/play-association.component.html
@@ -1,21 +1,28 @@
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin-top: 10px;">
     <div>
         <label style="font-weight: bold; font-size: 40px;">{{associationToPlay.label}}</label>
-        <Button style= "position:absolute; width:100px; height:50px; margin: 10px;" (click)="check()">Check</Button>
+        <Button style= "position:relative; width:100px; height:50px; margin: 10px;" (click)="check()">Check</Button>
+        <Button style= "position:relative; width:100px; height:50px; margin: 10px;" (click)="deleteAllConnections()">Réinitialiser</Button>
     </div>
     <div class = "association-game">
         <div class= "connectors-left">
             <div *ngFor = "let value of shuffledValuesToConnect; let i=index" >
-                <Button attr.id = "left-button{{i}}" style="width: 500px; height:100px" class = "button" *ngIf = "value != null" (click)="selectLeft(value, i)">
-                    {{value}}
-                </Button>
+                <div style="display: flex; margin-top:10px; margin-bottom:10px">
+                    <img style="display: block; max-width:500px; max-height:100px;"alt = "left-image{{i}}" src="{{value[1]}}" *ngIf = "value[1] != null && value[0] != null" (click)="selectLeft(value[0], i)">
+                    <Button attr.id = "left-button{{i}}" style="width: 500px; height:100px" class = "button" *ngIf = "value[0] != null" (click)="selectLeft(value[0], i)">
+                        {{value[0]}}
+                    </Button>
+                </div>
             </div>
         </div>
         <div class = "connectors-right">
             <div *ngFor = "let value of shuffledValuesToBeConnected; let i=index">
-                <Button attr.id = "right-button{{i}}" style="width: 500px; height:100px" class = "button" *ngIf = "value != null" (click)="selectRight(value, i)">
-                    {{value}}
-                </Button>
+                <div style="display: flex; margin-top:10px; margin-bottom:10px">
+                    <Button attr.id = "right-button{{i}}" style="width: 500px; height:100px" class = "button" *ngIf = "value[0] != null" (click)="selectRight(value[0], i)">
+                        {{value[0]}}
+                    </Button>
+                    <img style="display: block; max-width:500px; max-height:100px;" alt = "right-image{{i}}" src="{{value[1]}}" *ngIf = "value[1] != null && value[0] != null" (click)="selectRight(value[0], i)">
+                </div>
             </div>
         </div>
     </div>
