add home page and all links #57

--- a/front-end/src/app/caregiver/user-management/user-management.component.html
+++ b/front-end/src/app/caregiver/user-management/user-management.component.html
@@ -1,6 +1,6 @@
 <div class="top">
     <div>
-        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/home-profil-choice">
+        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/home">
         <h2>Retour</h2>
     </div>
     <div class="button-div" routerLink="/user-form">
