--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.html
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.html
@@ -1,5 +1,16 @@
-<h1 style="display: flex; justify-content: center; align-self: center; margin-top: 100px;">Cliquer sur la photo de vous</h1>
-<h1 style="display: flex; justify-content: center; align-self: center;">avec votre nom</h1>
+<div id="top">
+    <div style="display: flex; flex-direction: column; align-items: center; flex-basis: 5%;">
+        <img id="back" src="/assets/back.png" alt="back" routerLink="/home">
+        <h2>Retour</h2>
+    </div>
+    <div style="display: flex; flex-basis: 90%; flex-direction: column; margin-top: 100px;">
+        <h1 style="display: flex; justify-content: center; align-self: center;">Cliquer sur la photo de vous</h1>
+        <h1 style="display: flex; justify-content: center; align-self: center;">avec votre nom</h1>
+    </div>
+    <div style="display: flex; flex-basis: 5%;"></div>
+</div>
+
+
 
 <div class="user-list">
     <div *ngFor="let user of userList" class="user">
