--- a/front-end/src/app/quizzes/play-association/play-association.component.scss
+++ b/front-end/src/app/quizzes/play-association/play-association.component.scss
@@ -1,24 +1,23 @@
 .association-game{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
     position: absolute;
     top: 60%;
-    left: 50%;
+    left: 55%;
     transform: translate(-50%, -50%);
 
 }
 
 .connectors-left{
     width: 50%;
-    padding: 20px;
-    margin-right: 100px;
+    //padding: 20px;
+    // margin-right: 100px;
 }
 
 .connectors-right{
     width: 50%;
-    padding: 20px;
-    margin-left: 100px;
+    //padding: 20px;
+    // margin-left: 100px;
 }
 
 svg {
