--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
@@ -1,18 +1,28 @@
 <div class="top">
-    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+    <div style="display: flex; flex-direction: column; justify-content: space-between; align-items: center;">
         <img id="back" src="/assets/back.png" alt="back" routerLink="/user-management">
+        <h2 style="color:gray">Retour</h2>
     </div>
-    <div class="button-div" (click)="createTheme()">
-        <img src="/assets/edit.png" alt="edit">
-        <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Créer nouveau thème</h3>
+    <div class="button-div" (click)="createTheme()" style="display: flex; flex-direction: column; align-items: center;">
+        <img src="/assets/folder.png" alt="add-theme">
+        <h2>Créer thème</h2>
+    </div>
+    <div>
+        <img style="width: 100px; height: 100px;" src="/assets/edit.png" alt="edit">
+        <h3>PolyQuiz Editor</h3>
     </div>
 </div>
-<h1 style="display: flex; justify-content: center;">Choisissez un thème</h1>
+<hr>
+<h1 style="display: flex; justify-content: center;">Liste des Thèmes</h1>
+<hr style="border:none;height:1px;background-color: black; width:70%">
 <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:100%;">
     <div *ngFor="let theme of themeList, let i=index">
         <div class="theme">
-            <img class="theme-img" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="theme-{{i+1}}" src="/assets/theme-img/theme-{{i+1}}.jpg" (click)="goToTheme(i)">
-            <h2 style="display: flex; justify-content: center;">{{theme}}</h2>
+            <div>
+                <img class="theme-img" src="{{theme.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="theme-{{i+1}}" (click)="goToTheme(i)">
+                <img src="/assets/trash.png" alt="trash-img" (click)="deleteTheme(theme)">
+            </div>
+            <h2 style="display: flex; justify-content: center; margin-right: 80px;">{{theme.title}}</h2>
         </div>
     </div>
 </div>
