--- a/front-end/src/app/quizzes/theme-list/theme-list.component.html
+++ b/front-end/src/app/quizzes/theme-list/theme-list.component.html
@@ -13,8 +13,8 @@
 <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:100%;">
     <div *ngFor="let theme of themeList, let i=index">
         <div class="theme">
-            <img class="theme-img" alt="theme-{{i+1}}" src="/assets/theme-img/theme-{{i+1}}.jpg" (click)="goToTheme(i)">
-            <h2 style="display: flex; justify-content: center;">{{theme}}</h2>
+            <img class="theme-img" alt="theme-{{i+1}}" src="{{theme.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" (click)="goToTheme(i)">
+            <h2 style="display: flex; justify-content: center;">{{theme.title}}</h2>
         </div>
     </div>
 </div>
