--- a/front-end/src/app/questions/question-form/question-form.component.html
+++ b/front-end/src/app/questions/question-form/question-form.component.html
@@ -4,17 +4,19 @@
   <form class="quiz-form" [formGroup]="questionForm">
     <label for="label">
       Question :
-      <input class="input-text" type="text" id="label" [formControlName]="'label'">
+      <input class="input-text" type="text" id="label" [formControlName]="'label'" maxlength="50">
     </label>
-    <button style= "margin: 10px;" class="button-card" (click)="addAnswer()">Ajouter réponse</button>
+    <button style= "margin: 10px;" class="button-card" [disabled]="this.questionForm.get('answers').value.length >= 4" (click)="addAnswer()">Ajouter réponse</button>
     <div class="answer" formArrayName="answers">
       <div *ngFor="let address of answers.controls; let i=index">
         <div class="answer-form" [formGroupName]="i">
           <label>
             Réponse {{i + 1}} :
-            <input class = "input-text" type="text" [formControlName]="'value'"><br>
+            <input class = "input-text" type="text" [formControlName]="'value'" maxlength="25"><br>
             Bonne réponse :
-            <input style="margin: 10px; width: 20px; height: 20px;" class = "input" type="checkbox" [formControlName]="'isCorrect'">
+            <input style="margin: 10px; width: 20px; height: 20px;" class = "input" type="checkbox" [formControlName]="'isCorrect'"">
+            Lien d'image :
+            <input class = "input-text" type="text" [formControlName]="'coverImage'">
           </label>
         </div>
       </div>
