fix: misstyped attribute in input. #58

--- a/front-end/src/app/questions/question-form/question-form.component.html
+++ b/front-end/src/app/questions/question-form/question-form.component.html
@@ -14,7 +14,7 @@
             Réponse {{i + 1}} :
             <input class = "input-text" type="text" [formControlName]="'value'" maxlength="25"><br>
             Bonne réponse :
-            <input style="margin: 10px; width: 20px; height: 20px;" class = "input" type="checkbox" [formControlName]="'isCorrect'"">
+            <input style="margin: 10px; width: 20px; height: 20px;" class = "input" type="checkbox" [formControlName]="'isCorrect'">
             Lien d'image :
             <input class = "input-text" type="text" [formControlName]="'coverImage'">
           </label>
