fix: correct image input name for form. #58

--- a/front-end/src/app/questions/question-form/question-form.component.html
+++ b/front-end/src/app/questions/question-form/question-form.component.html
@@ -16,7 +16,7 @@
             Bonne réponse :
             <input style="margin: 10px; width: 20px; height: 20px;" class = "input" type="checkbox" [formControlName]="'isCorrect'">
             Lien d'image :
-            <input class = "input-text" type="text" [formControlName]="'coverImage'">
+            <input class = "input-text" type="text" [formControlName]="'img'">
           </label>
         </div>
       </div>
