--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -8,3 +8,25 @@
 <h3>Associations :</h3>
 <button class= "create-button" routerLink = "/association-form/{{this.theme}}/{{this.quiz.id}}" (click)="selectQuiz()">Créer une association +</button>
 <app-association-list [quiz]="quiz"></app-association-list>
+<h3>Patients attribués :</h3>
+<p style="color:gray">Cliquez sur l'icône pour ajouter un patient</p>
+<div style="display: flex; flex-direction: row;">
+    <img class="user-img" src="/assets/users/add-user.png" alt="add-user-img" (click)="displayUserToAdd()">
+    <div *ngFor="let user of this.userList" style="display: flex; flex-direction: column; margin-left: 15px; margin-right: 15px; align-items: center;">
+        <img class="user-img" src="{{this.user.photo}}" onerror="this.onerror=null; this.src='/assets/users/user.png'" alt="user-img" (click)="removeUserToQuiz(user)">
+        <p style="display: flex; justify-content: center; align-self: center; max-width: 100px;">{{user.firstName}} {{user.lastName}}</p>
+    </div>
+</div>
+<div id="user-to-add" style="display: none; flex-direction: column;">
+    <p style="color:gray">Cliquez sur les utilisateurs que vous souhaitez ajouter</p>
+    <div style="display: flex; flex-direction: row;">
+        <div *ngFor="let user of remainingUsers" style="display: flex; flex-direction: row; align-items: center;">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+                <img class="user-img" src="{{this.user.photo}}" onerror="this.onerror=null; this.src='/assets/users/user.png'" alt="user-img" (click)="addUserToQuiz(user)">
+                <p style="display: flex; justify-content: center; align-self: center; max-width: 100px;">{{user.firstName}} {{user.lastName}}</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
