--- a/front-end/src/app/quizzes/quiz-editor/quiz-editor.component.scss
+++ b/front-end/src/app/quizzes/quiz-editor/quiz-editor.component.scss
@@ -25,3 +25,10 @@ img {
   align-items: center;
   justify-content: space-between;
 }
+
+hr {
+  border: none;
+  height: 3px;
+  background-color: black;
+  width: 100%;
+}
