--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: row; margin-top: 20px; justify-content: space-between;">
     <div style="display:flex; flex-direction: row; align-items: center;">
-        <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img">
+        <img id="quiz-img" src="{{quiz.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="quiz-img">
         <div style="display: flex; flex-direction: column; margin-left: 16px;">
             <h4 style="margin:0">{{quiz.name}}</h4>
             <span style="margin: 0; font-size: 20px;">Question {{numQuestion}}/{{quiz.questions.length + quiz.associations.length}}</span>
@@ -29,7 +29,7 @@
     <h1 class="answer-text">La bonne réponse est :</h1>
 </div>
 <div style="display:flex; justify-content: center;">
-    <img *ngIf = "numQuestion <= quiz.questions.length" id="answer-img" alt="answer-{{correctAnswer+1}}" src="/assets/quiz-{{quiz.id}}/question-{{numQuestion}}/img-{{correctAnswer+1}}.jpg">
+    <img *ngIf = "numQuestion <= quiz.questions.length" id="answer-img" alt="answer-{{correctAnswer+1}}" src="{{quiz.questions[numQuestion-1].answers[correctAnswer].img}}">
     <div *ngIf="numQuestion > quiz.questions.length" class="answer-text">
         <div style="display: inline-block; margin: 20px;" *ngFor = "let connection of quiz.associations[numQuestion - quiz.questions.length - 1].connections; let i=index;">
             <div class="card" style="margin: 10px;" *ngIf="connection.valueToConnect && connection.valueToBeConnected">
